# Roguelike-linux

./: CMakeLists.txt  README.md  format.sh  run.sh
Resources/Aseprite/: big_rock_1.aseprite  deep_water.aseprite  forest.aseprite  grass.aseprite  pebbles_1.aseprite  wall.aseprite  water_lily_1.aseprite
src/: ActorManager.cpp  ActorManager.h  AssetManager.cpp  AssetManager.h  CMakeLists.txt  Chunked.cpp  Chunked.h  Dick.json  Enemy.cpp  Enemy.h  EnemyChunk.cpp  EnemyChunk.h  EnemyGenerator.cpp  EnemyGenerator.h  Game.cpp  Game.h  GamePlay.cpp  GamePlay.h  Hero.cpp  Hero.h  Labirynth.json  MainMenu.cpp  MainMenu.h  Map.json  MapParser.cpp  MapParser.h  PerlinNoise.cpp  PerlinNoise.h  Settings.cpp  Settings.h  Settings.json  SettingsState.cpp  SettingsState.h  Source.cpp  State.h  StateManager.cpp  StateManager.h  Tile.cpp  Tile.h  TileChunk.cpp  (+14 more)
src/Base/: ActorManager.h  AssetManager.cpp  AssetManager.h  CMakeLists.txt  Chunked.cpp  Decoration.h  Enemy.cpp  EnemyChunk.h  EnemyGenerator.cpp  Game.cpp  Game.h  GamePlay.cpp  GamePlay.h  MapParser.cpp  MapParser.h  PerlinNoise.cpp  PerlinNoise.h  Pond.json  Save.json  Save1.json  Settings.cpp  Settings.h  StateManager.h  TextField.h  TextField2.cpp  TextField2.h  TileChunk.h  TileLoader.cpp  Window.cpp  Window.h  World.cpp  WorldGenerator.h
src/Base/Resources/: discarded_code.txt
src/Base/Resources/Aseprite/: Sprite-0001.aseprite  big_tree.aseprite  cattail_1.aseprite  dark_water.aseprite  flowers_2.aseprite  pebbles_2.aseprite  shallow_water.aseprite  tree_1.aseprite
src/Settings/: CMakeLists.txt
src/SfmlGui/: CMakeLists.txt  ClickState.cpp  ClickState.h  InputField.cpp  InputField.h  Slider.cpp  Slider.h  TextField.cpp  TextField.h  TextField2.cpp  TextField2.h  UiElement.h  Window.cpp  Window.h
src/Utils/: CMakeLists.txt  json.hpp
